<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CustomerAccountActivity"
    android:background="@drawable/background"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/customerAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/accountText"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/customerFirstNameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:text="@string/firstNameText2" />

            <TextView
                android:id="@+id/customerAccountFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/yellowDark"
                android:textSize="15sp"
                android:text="@string/firstNameText" />

            <TextView
                android:id="@+id/customerLastNameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:text="@string/lastNameText2"/>

            <TextView
                android:id="@+id/customerAccountLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/yellowDark"
                android:textSize="15sp"
                android:text="@string/lastNameText" />

            <TextView
                android:id="@+id/customerEmailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:text="@string/emailText2" />

            <TextView
                android:id="@+id/customerAccountEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/yellowDark"
                android:textSize="15sp"
                android:text="@string/emailText" />

            <TextView
                android:id="@+id/customerPhoneTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:text="@string/mobileNumberText2" />

            <TextView
                android:id="@+id/customerAccountPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/yellowDark"
                android:textSize="15sp"
                android:text="@string/mobileNumberText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/changePasswordCustomer"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:text="@string/changePasswordText"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/deleteCustomerAccount"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:text="@string/deleteAccountText"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>