<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BusinessRegisterActivity"
    android:background="@drawable/background"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/registerText"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/businessRegisterEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="25dp"
                android:hint="@string/emailText"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:autofillHints="" />

            <EditText
                android:id="@+id/businessRegisterPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/passwordText"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/businessUniqueIdName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:maxLength="100"
                android:hint="@string/businessUniqueIdNameText"
                android:inputType="textPersonName"
                android:labelFor="@string/businessUniqueIdNameText"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/businessRegisterAfmInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/businessAfmText"
                android:inputType="number"
                android:maxLength="9"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/businessRegisterPhoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/phoneNumberText"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/addressInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:maxLength="100"
                android:hint="@string/businessAddressText"
                android:inputType="textPersonName"
                android:labelFor="@string/businessAddressText"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/postalCodeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:autofillHints=""
                android:maxLength="5"
                android:textSize="14sp"
                android:hint="@string/postalCodeText"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="number" />

            <EditText
                android:id="@+id/numberTablesInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="3"
                android:textSize="14sp"
                android:autofillHints=""
                android:hint="@string/numberTablesText"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="number" />

            <Button
                android:id="@+id/businessRegisterButton2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/purple"
                android:text="@string/registerButton2Text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numberTablesExplainedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="italic"
                android:text="@string/numberTablesExplained" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>